src/pages/platformAmbient/Trade/TradeCharts/TradeCharts.module.css
.chart_overlay_container {
    display: flex;
    justify-content: flex-end;
    align-items: flex-end;
}

.active_selected_button,
.non_active_selected_button {
    background: transparent;
    transition: var(--transition);
    cursor: pointer;
    font-size: var(--body-size);
    line-height: var(--body-lh);
    color: var(--text2);
    text-align: center;

    outline: none;
    border: none;
    padding: 1px 8px;
    position: relative;
}
.active_selected_button:hover,
.non_active_selected_button:hover {
    background-color: var(--dark3);
}

.settings_container button:focus-visible {
    box-shadow: var(--glow-light-box-shadow);
}

.time_frame_container {
    display: flex;
    flex-direction: column;
    gap: 12px;

    width: 100%;
    min-height: 300px;
    padding: 8px;
    /* justify-content: flex-start;
    align-items: start; */
}

.mobile_settings_row {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
}
.mobile_settings_header {
    font-size: var(--body-size);
    line-height: var(--body-lh);
    color: var(--text2);
}
.settings_apply_button_container {
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    padding-bottom: 1rem;
}
.settings_apply_button_container button {
    background: var(--accent1);
    color: var(--text1);
    padding: 8px 16px;
    border: none;
    border-radius: 4px;
    cursor: pointer;
    font-size: var(--body-size);
    line-height: var(--body-lh);

    transition: all 0.3s ease-in-out;
    width: 200px;
}

@media screen and (min-width: 768px) {
    .time_frame_container {
        flex-direction: row;
        align-items: center;
        justify-content: space-between;
        background: transparent;
        min-height: 0;
        padding: 0;
        gap: 0;
    }
    .mobile_settings_header {
        display: none;
    }
    .active_selected_button:hover, .futa_active_selected_button:hover
    .non_active_selected_button:hover, .futa_non_active_selected_button {
        /* background: var(--title-gradient); */
        color: var(--text1);
    }

    .current_data_info {
        font-size: var(--body-size);
    }

    .chart_tooltips {
        padding-left: 5px;
    }
}

.active_selected_button, .futa_active_selected_button {
    width: 100%;
    height: 100%;
    color: var(--text1);
}

.non_active_selected_button, .futa_non_active_selected_button {
    color: var(--text2);
}

